2013-06-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/web2c.ac (kpse_tex_progs): Drop explicit XeTeX dependencies
	on icu and graphite2, already implied by harfbuzz.

2013-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/web2c.ac (kpse_tex_progs): LuaTeX requires libs/lua52.
	* Makefile.am: Drop luatexdir/am/liblua52.am.

2013-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Add KPSE_LUA52_FLAGS.
	* Makefile.am: Add PTEXENC_RULE and LUA52_RULE.

2013-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update to e-pTeX and e-upTeX 130605 from Hironori Kitagawa.
	* texmfmp.h (pdftex_fail): Copy declaration from
	pdftexdir/pdftex-common.h to here.
	(initstarttime, makecstring, makecfilename, getcreationdate,
	getfilemoddate, getfilesize): Move declarations from
	pdftexdir/ptexlib.h to here.

2013-04-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* triptrap/mftrap.diffs, triptrap/trip.diffs: Update for TL 2013.

2013-03-27  Khaled Hosny  <khaledhosny@eglug.org>

	* texmfmp.h [XeTeX]: Temporary fix for building with Clang on Mac.

2013-03-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop duplicate KPSE_XPDF_FLAGS.

2013-03-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Reorder included Makefile fragments and drop the
	obsolete luatexdir/am/liblua51.am.
	* ac/web2c.ac: MetaPost now uses cairo.

2013-03-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Add luatexdir/am/liblua52.am for LuaTeX 0.75.0.
	* configure.ac: New conditional USE_DLOPEN.

2013-03-11  Karl Berry  <karl@tug.org>

	* doc/web2c.texi (Initial TeX, Initial Metafont): initex
	and inimf are present again (as of 2011).  Report from Uwe Lueck.

2013-03-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* triptrap-sh: Drop duplicate header msg.

2013-02-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid spurious failures of parallel tests.
	* pbibtex-longline-test.pl: Use longline.bib from source tree.
